  Castells).
- Check the selection passed into setSelection in the selection
  plugin, to guard against errors when synchronizing plots (fix by Lau
  Bech Lauritzen).
- Fix bug in crosshair code with mouseout resetting the crosshair even
  if it is locked (fix by Lau Bech Lauritzen and Banko Adam).
- Fix bug with points plotting using line width from lines rather than
  points.

Flot 0.6
--------

API changes:

1. Selection support has been moved to a plugin. Thus if you're
passing selection: { mode: something }, you MUST include the file
jquery.flot.selection.js after jquery.flot.js. This reduces the size
of base Flot and makes it easier to customize the selection as well as
improving code clarity. The change is based on a patch from andershol.

2. In the global options specified in the $.plot command,
"lines", "points", "bars" and "shadowSize" have been moved to a
sub-object called "series", i.e.

  $.plot(placeholder, data, { lines: { show: true }})

should be changed to

  $.plot(placeholder, data, { series: { lines: { show: true }}})

All future series-specific options will go into this sub-object to
simplify plugin writing. Backward-compatibility code is in place, so
old code should not break.

3. "plothover" no longer provides the original data point, but instead
a normalized one, since there may be no corresponding original point.

4. Due to a bug in previous versions of jQuery, you now need at least
jQuery 1.2.6. But if you can, try jQuery 1.3.2 as it got some
improvements in event handling speed.


Changes:

- Added support for disabling interactivity for specific data series
  (request from Ronald Schouten and Steve Upton).

- Flot now calls $() on the placeholder and optional legend container
  passed in so you can specify DOM elements or CSS expressions to make
  it easier to use Flot with libraries like Prototype or Mootools or
  through raw JSON from Ajax responses.

- A new "plotselecting" event is now emitted while the user is making
  a selection.